# devops-maturity-model

./: .gitignore  00_START_HERE.txt  CALMS_FRAMEWORK_TESTING_GUIDE.md  CALMS_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  MERGE_RESOLUTION_SUMMARY.md  PEER_REVIEW.md  README.md  RESEARCH_INDEX.md  RESEARCH_SUMMARY.txt  SPIRAAPP_ARCHITECTURE_DIAGRAMS.md  SPIRAAPP_QUICK_REFERENCE.md  UPGRADE-TO-2.0.md  build_spiraapp.sh  devops-maturity-spec-Complete.md  devops-maturity-spec-MVP.md  docker-compose.deploy.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  create_test_user.py  docker-entrypoint.sh  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 001_add_frameworks.py  20251006_1908_05d742c070f1_initial_migration.py  20251007_1354_e83628808cc6_complete_spec_schema_5_domains_20_gates.py  20251007_1600_initial_schema.py  20251015_0409_2d801ad1aac1_update_domain_enum_values.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: analytics.py  assessments.py  auth.py  frameworks.py  gates.py  organizations.py
backend/app/core/: __init__.py  gates.py  scoring.py  security.py
backend/app/scripts/: init_database.py  seed_calms_framework.py  seed_dora_framework.py  seed_frameworks.py
backend/app/utils/: pdf_generator.py
docs/: BUILD_AND_TOOLS.md  CALMS_FRAMEWORK_ANALYSIS.md  CALMS_SIZING_RECOMMENDATION.md  CLAUDE_INSTRUCTIONS.md  DORA_FRAMEWORK_PLAN.md  HANDOFF-SUMMARY.md  HANDOFF_PROMPT.md  SPIRAAPP_TECHNICAL_ARCHITECTURE.md  USER-GUIDE.md  (+9 more)
(+51 files in other folders)
